replace spaces in a given string

--- a/Problems/Replace_a_given _string_with_symbol.html
+++ b/Problems/Replace_a_given _string_with_symbol.html
@@ -6,7 +6,7 @@
     <title>replace spaces in a given string </title>
 </head>
 <body>
-    replace spaces in a given string 
+    Replace spaces in a given string 
 </body>
 <script>
     function Replace(str){
