--- a/FECC/DOM/A3/index.html
+++ b/FECC/DOM/A3/index.html
@@ -3,30 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products Page</title>
-<link rel="stylesheet" href="style.css">
+    <title>Sort Products </title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div>
-        <select  id="filterByCategory">
-            <option value="">Choose by category</option>
-            <option value="men's clothing">men's clothing</option>
-            <option value="women's clothing">women's clothing</option>
-            <option value="jewelery">jewelery</option>
-            <option value="electronics">electronics</option>
-
+    <h1>Products Details</h1>
+    <div id="sorting_box">
+        <select name="" id="sortViaPrice">
+            <option value="">Select the Options</option>
+            <option value="price low to high">Price Low to High</option>
+            <option value="price high to low">Price High to Low</option>
+            <option value="rating low to high">Rating Low to High</option>
+            <option value="rating high to low">Rating High to Low</option>
         </select>
-    
-        <select  id="sortByPrice">
-            <option value="">sort by price </option>
-            <option value="price-high-to-low">High to low</option>
-            <option value="price-low-to-high">low to high</option>
+
+        <select name="" id="sortViaCategory">
+            <option value="">Select the category</option>
+            <option value="men's clothing">Men's clothing</option>
+            <option value="jewelery">Jewelery</option>
+            <option value="electronics">Electronics</option>
+            <option value="women's clothing">Women's clothing</option>
         </select>
     </div>
-    <div id="products-container" class="products-container"></div>
 
-   
+    <div id="displayProducts"></div>
 </body>
+<script src="index.js"></script>
 </html>
- <script src="index.js"></script> 
