--- a/FECC/DOM/A6/index.html
+++ b/FECC/DOM/A6/index.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Registration Form</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="body_outline">
+      <h1 id="page_heading">Registration From</h1>
 
-<body>
-    <h1> Registration Form</h1>
+      <div id="form_details">
+        <form action="">
+          <div class="input_box">
+            <label for="name">Name: &nbsp &nbsp &nbsp </label>
+            <input type="text" id="username" required="\&A-Za-z\+" />
+          </div>
 
-    <form>
-        <div id="formBox"></div>
-        <div class="formInput">
+          <div class="input_box">
+            <label for="email">Email: &nbsp &nbsp &nbsp</label>
+            <input type="email" id="useremail" required; />
+          </div>
 
-            <label for="name" >Name:</label>
-            <input type="text" id="name" name="name" required pattern="[A-Za-z\s]"
-            title="Name should contain only alphabetic characters">
-        </div>
+          <div class="input_box">
+            <label for="password">Password: </label>
+            <input type="password" id="userpassword" required />
+          </div>
 
-        <div class="formInput">
-            <label for="email">Email Address:</label>
-            <input type="email" id="email" name="email">
-        </div>
+          <input type="submit" id="btn_submit" />
+        </form>
+      </div>
+    </div>
 
-        <div class="formInput">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required minlength="8">
-        </div>
+    <div id="display_data">
+      <h2 id="display_data_heading">User Details List :-</h2>
 
-        <div class="formInput">
-            <input type="submit" id="btn_submit">
-        </div>
-
-    </form>
-
-</body>
-<script src="index.js"></script>
-
+      <div id="user_data_displayed"></div>
+    </div>
+  </body>
+  <script src="index.js"></script>
 </html>
+
