--- a/FECC/DOM/A6/index.html
+++ b/FECC/DOM/A6/index.html
@@ -35,7 +35,23 @@
     <div id="display_data">
       <h2 id="display_data_heading">User Details List :-</h2>
 
-      <div id="user_data_displayed"></div>
+      <div id="user_data_displayed">
+
+        <div class="sortSection">
+            <select name="" id="sort_by_order">
+                <option value="">Select the option</option>
+                <option value="">Sort A-Z</option>
+                <option value="">Sort Z-A</option>
+            </select>
+
+            <div class="search_box">
+                <label for="serach"> Search:</label>
+                <input type="text" id="serachId">
+            </div>
+
+        </div>
+
+      </div>
     </div>
   </body>
   <script src="index.js"></script>
