--- a/FECC/Project/Bewakoof Website/index.html
+++ b/FECC/Project/Bewakoof Website/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/components/Headercomp/Main_Header/image/bwkf_icon.png" sizes="192x192" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bewakoof Site</title>
+    <title> Bewakoof Site </title>
 
     <!-- Google Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
